k8s/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: openbalena
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - api.${OPENBALENA_HOST_NAME}
    - registry.${OPENBALENA_HOST_NAME}
    - s3.${OPENBALENA_HOST_NAME}
    secretName: echo-tls
  rules:
  - host: api.${OPENBALENA_HOST_NAME}
    http:
      paths:
      - path: /
        backend:
          serviceName: api
          servicePort: 80
  - host: registry.${OPENBALENA_HOST_NAME}
    http:
      paths:
      - path: /
        backend:
          serviceName: registry
          servicePort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-vpn
  namespace: openbalena
  annotations:
    kubernetes.io/ingress.class: "haproxy"
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: vpn.${OPENBALENA_HOST_NAME}
    http:
      paths:
      - path: /
        backend:
          serviceName: vpn
          servicePort: 80

  # - host: s3.${OPENBALENA_HOST_NAME}
  #   http:
  #     paths:
  #     - path: /
  #       backend:
  #         serviceName: s3
  #         servicePort: 80
